# ChangeLog for x11-libs/openmotif
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/openmotif/ChangeLog,v 1.212 2009/02/04 21:04:38 ulm Exp $

  04 Feb 2009; Ulrich Mueller <ulm@gentoo.org>
  +files/openmotif-2.3.1-ac-editres.patch, openmotif-2.3.0-r3.ebuild,
  openmotif-2.3.1.1.ebuild:
  Fix "present but cannot be compiled" warning in configure, in order to
  prepare for autoconf-2.64. Bug 82081 (see also tracker bug 257596).

  05 Jan 2009; Markus Meier <maekke@gentoo.org> metadata.xml:
  drop local xft USE-flag description, as it's global now

  12 Nov 2008; Ulrich Mueller <ulm@gentoo.org>
  -files/openmotif-2.3.1-XmRenderT-no-xft.patch,
  -files/openmotif-2.3.1-fix-grace-crash.patch, -openmotif-2.3.1-r1.ebuild:
  Remove intermediate version.

  12 Nov 2008; Brent Baude <ranger@gentoo.org> openmotif-2.3.1.1.ebuild:
  stable ppc64, bug 245635

  10 Nov 2008; Jeroen Roovers <jer@gentoo.org> openmotif-2.3.1.1.ebuild:
  Stable for HPPA (bug #245635).

  08 Nov 2008; Ulrich Mueller <ulm@gentoo.org> -files/motif-config-2.3,
  -openmotif-2.3.0-r1.ebuild:
  Remove old.

  08 Nov 2008; Raúl Porcel <armin76@gentoo.org> openmotif-2.3.1.1.ebuild:
  alpha/arm/ia64/sparc/sh stable wrt #245635

  08 Nov 2008; Markus Meier <maekke@gentoo.org> openmotif-2.3.1.1.ebuild:
  amd64/x86 stable, bug #245635

  08 Nov 2008; nixnut <nixnut@gentoo.org> openmotif-2.3.1.1.ebuild:
  Stable on ppc wrt bug 245635

  05 Nov 2008; Ferris McCormick <fmccor@gentoo.org>
  openmotif-2.3.1.1.ebuild:
  Sparc stable, Bug #245635, seems fine.

*openmotif-2.3.1.1 (05 Oct 2008)

  05 Oct 2008; Ulrich Mueller <ulm@gentoo.org> +openmotif-2.3.1.1.ebuild:
  Version bump, bug 239480.

  26 Aug 2008; Jeroen Roovers <jer@gentoo.org> openmotif-2.3.1-r1.ebuild:
  Stable for HPPA (bug #235459).

  25 Aug 2008; Raúl Porcel <armin76@gentoo.org> openmotif-2.3.1-r1.ebuild:
  alpha/ia64 stable wrt #235459
