@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/openmotif
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/openmotif/ChangeLog,v 1.212 2009/02/04 21:04:38 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/openmotif/ChangeLog,v 1.213 2009/04/14 17:35:19 ulm Exp $
+
+*openmotif-2.3.2 (14 Apr 2009)
+
+  14 Apr 2009; Ulrich Mueller <ulm@gentoo.org> +openmotif-2.3.2.ebuild:
+  Version bump. Remove -j1 option from emake.
 
   04 Feb 2009; Ulrich Mueller <ulm@gentoo.org>
   +files/openmotif-2.3.1-ac-editres.patch, openmotif-2.3.0-r3.ebuild,
